tests/fsharp/typecheck/overloads/neg_System.Threading.Tasks.Task.Run.OverloadList.bsl

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(5,16,5,19): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: (unit -> Task<int>)

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(6,16,6,19): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(7,16,7,19): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(8,26,8,29): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(9,16,9,19): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>

neg_System.Threading.Tasks.Task.Run.OverloadList.fsx(10,16,10,19): typecheck error FS0041: A unique overload for method 'Run' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: Func<Task<int>>

Candidates:
 - Task.Run<'TResult>(``function`` : Func<'TResult>) : Task<'TResult>
 - Task.Run<'TResult>(``function`` : Func<Task<'TResult>>) : Task<'TResult>
